// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ESLint calculated config Snapshot > .js 1`] = `
{
  "languageOptions": {
    "ecmaVersion": "latest",
    "globals": {
      "AbortController": false,
      "AbortSignal": false,
      "Blob": false,
      "BroadcastChannel": false,
      "Buffer": false,
      "ByteLengthQueuingStrategy": false,
      "CompressionStream": false,
      "CountQueuingStrategy": false,
      "Crypto": false,
      "CryptoKey": false,
      "CustomEvent": false,
      "DOMException": false,
      "DecompressionStream": false,
      "Event": false,
      "EventTarget": false,
      "File": false,
      "FormData": false,
      "Headers": false,
      "MessageChannel": false,
      "MessageEvent": false,
      "MessagePort": false,
      "Navigator": false,
      "Performance": false,
      "PerformanceEntry": false,
      "PerformanceMark": false,
      "PerformanceMeasure": false,
      "PerformanceObserver": false,
      "PerformanceObserverEntryList": false,
      "PerformanceResourceTiming": false,
      "ReadableByteStreamController": false,
      "ReadableStream": false,
      "ReadableStreamBYOBReader": false,
      "ReadableStreamBYOBRequest": false,
      "ReadableStreamDefaultController": false,
      "ReadableStreamDefaultReader": false,
      "Request": false,
      "Response": false,
      "SubtleCrypto": false,
      "TextDecoder": false,
      "TextDecoderStream": false,
      "TextEncoder": false,
      "TextEncoderStream": false,
      "TransformStream": false,
      "TransformStreamDefaultController": false,
      "URL": false,
      "URLSearchParams": false,
      "WebAssembly": false,
      "WritableStream": false,
      "WritableStreamDefaultController": false,
      "WritableStreamDefaultWriter": false,
      "__dirname": false,
      "__filename": false,
      "atob": false,
      "btoa": false,
      "clearImmediate": false,
      "clearInterval": false,
      "clearTimeout": false,
      "console": false,
      "crypto": false,
      "exports": true,
      "fetch": false,
      "global": false,
      "module": false,
      "navigator": false,
      "performance": false,
      "process": false,
      "queueMicrotask": false,
      "require": false,
      "setImmediate": false,
      "setInterval": false,
      "setTimeout": false,
      "structuredClone": false,
    },
    "parser": "espree",
    "parserOptions": {},
    "sourceType": "module",
  },
  "linterOptions": {
    "reportUnusedDisableDirectives": 1,
  },
  "plugins": [
    "@",
    "simple-import-sort:eslint-plugin-simple-import-sort",
    "redos",
    "unicorn:eslint-plugin-unicorn",
    "regexp:eslint-plugin-regexp",
    "jest:eslint-plugin-jest",
  ],
  "rules": {
    "constructor-super": [
      2,
    ],
    "default-case-last": [
      2,
    ],
    "eqeqeq": [
      2,
      "always",
      {
        "null": "ignore",
      },
    ],
    "for-direction": [
      2,
    ],
    "func-names": [
      1,
    ],
    "getter-return": [
      2,
    ],
    "grouped-accessor-pairs": [
      2,
    ],
    "guard-for-in": [
      2,
    ],
    "jest/expect-expect": [
      1,
    ],
    "jest/no-alias-methods": [
      2,
    ],
    "jest/no-commented-out-tests": [
      1,
    ],
    "jest/no-conditional-expect": [
      2,
    ],
    "jest/no-disabled-tests": [
      1,
    ],
    "jest/no-done-callback": [
      2,
    ],
    "jest/no-export": [
      2,
    ],
    "jest/no-focused-tests": [
      2,
    ],
    "jest/no-identical-title": [
      2,
    ],
    "jest/no-interpolation-in-snapshots": [
      2,
    ],
    "jest/no-jasmine-globals": [
      2,
    ],
    "jest/no-mocks-import": [
      2,
    ],
    "jest/no-standalone-expect": [
      2,
    ],
    "jest/no-test-prefixes": [
      2,
    ],
    "jest/prefer-to-be": [
      2,
    ],
    "jest/prefer-to-contain": [
      2,
    ],
    "jest/prefer-to-have-length": [
      2,
    ],
    "jest/valid-describe-callback": [
      2,
    ],
    "jest/valid-expect": [
      2,
    ],
    "jest/valid-expect-in-promise": [
      2,
    ],
    "jest/valid-title": [
      2,
    ],
    "no-async-promise-executor": [
      2,
    ],
    "no-await-in-loop": [
      1,
    ],
    "no-buffer-constructor": [
      2,
    ],
    "no-caller": [
      2,
    ],
    "no-case-declarations": [
      2,
    ],
    "no-class-assign": [
      2,
    ],
    "no-compare-neg-zero": [
      2,
    ],
    "no-cond-assign": [
      2,
    ],
    "no-const-assign": [
      2,
    ],
    "no-constant-binary-expression": [
      2,
    ],
    "no-constant-condition": [
      2,
    ],
    "no-control-regex": [
      2,
    ],
    "no-debugger": [
      2,
    ],
    "no-delete-var": [
      2,
    ],
    "no-dupe-args": [
      2,
    ],
    "no-dupe-class-members": [
      2,
    ],
    "no-dupe-else-if": [
      2,
    ],
    "no-dupe-keys": [
      2,
    ],
    "no-duplicate-case": [
      2,
    ],
    "no-else-return": [
      2,
      {
        "allowElseIf": false,
      },
    ],
    "no-empty": [
      2,
      {
        "allowEmptyCatch": true,
      },
    ],
    "no-empty-pattern": [
      2,
    ],
    "no-empty-static-block": [
      1,
    ],
    "no-eval": [
      2,
    ],
    "no-ex-assign": [
      2,
    ],
    "no-extend-native": [
      2,
    ],
    "no-extra-bind": [
      2,
    ],
    "no-extra-boolean-cast": [
      2,
    ],
    "no-extra-label": [
      2,
    ],
    "no-fallthrough": [
      2,
    ],
    "no-func-assign": [
      2,
    ],
    "no-global-assign": [
      2,
    ],
    "no-import-assign": [
      2,
    ],
    "no-irregular-whitespace": [
      2,
    ],
    "no-iterator": [
      2,
    ],
    "no-label-var": [
      2,
    ],
    "no-lone-blocks": [
      2,
    ],
    "no-lonely-if": [
      2,
    ],
    "no-loss-of-precision": [
      2,
    ],
    "no-misleading-character-class": [
      2,
    ],
    "no-new": [
      2,
    ],
    "no-new-native-nonconstructor": [
      2,
    ],
    "no-new-object": [
      2,
    ],
    "no-new-require": [
      2,
    ],
    "no-new-wrappers": [
      2,
    ],
    "no-nonoctal-decimal-escape": [
      2,
    ],
    "no-obj-calls": [
      2,
    ],
    "no-octal": [
      2,
    ],
    "no-octal-escape": [
      2,
    ],
    "no-path-concat": [
      2,
    ],
    "no-promise-executor-return": [
      2,
    ],
    "no-proto": [
      2,
    ],
    "no-prototype-builtins": [
      2,
    ],
    "no-redeclare": [
      2,
    ],
    "no-regex-spaces": [
      2,
    ],
    "no-restricted-properties": [
      2,
      {
        "message": "arguments.callee is deprecated",
        "object": "arguments",
        "property": "callee",
      },
      {
        "message": "Please use Number.isFinite instead",
        "object": "global",
        "property": "isFinite",
      },
      {
        "message": "Please use Number.isFinite instead",
        "object": "self",
        "property": "isFinite",
      },
      {
        "message": "Please use Number.isFinite instead",
        "object": "window",
        "property": "isFinite",
      },
      {
        "message": "Please use Number.isNaN instead",
        "object": "global",
        "property": "isNaN",
      },
      {
        "message": "Please use Number.isNaN instead",
        "object": "self",
        "property": "isNaN",
      },
      {
        "message": "Please use Number.isNaN instead",
        "object": "window",
        "property": "isNaN",
      },
      {
        "message": "Please use Object.defineProperty instead.",
        "property": "__defineGetter__",
      },
      {
        "message": "Please use Object.defineProperty instead.",
        "property": "__defineSetter__",
      },
      {
        "message": "Use the exponentiation operator (**) instead.",
        "object": "Math",
        "property": "pow",
      },
    ],
    "no-return-assign": [
      2,
    ],
    "no-script-url": [
      2,
    ],
    "no-self-assign": [
      2,
    ],
    "no-self-compare": [
      2,
    ],
    "no-sequences": [
      2,
    ],
    "no-setter-return": [
      2,
    ],
    "no-shadow-restricted-names": [
      2,
    ],
    "no-sparse-arrays": [
      2,
    ],
    "no-template-curly-in-string": [
      2,
    ],
    "no-this-before-super": [
      2,
    ],
    "no-undef": [
      2,
    ],
    "no-undef-init": [
      2,
    ],
    "no-unreachable": [
      2,
    ],
    "no-unsafe-finally": [
      2,
    ],
    "no-unsafe-negation": [
      2,
    ],
    "no-unsafe-optional-chaining": [
      2,
    ],
    "no-unused-labels": [
      2,
    ],
    "no-unused-private-class-members": [
      2,
    ],
    "no-unused-vars": [
      1,
    ],
    "no-useless-catch": [
      2,
    ],
    "no-useless-escape": [
      2,
    ],
    "no-with": [
      2,
    ],
    "prefer-const": [
      1,
    ],
    "prefer-destructuring": [
      2,
      {
        "AssignmentExpression": {
          "array": false,
          "object": false,
        },
        "VariableDeclarator": {
          "array": false,
          "object": true,
        },
      },
      {
        "enforceForRenamedProperties": false,
      },
    ],
    "redos/no-vulnerable": [
      2,
    ],
    "regexp/confusing-quantifier": [
      1,
    ],
    "regexp/control-character-escape": [
      2,
    ],
    "regexp/match-any": [
      2,
    ],
    "regexp/negation": [
      2,
    ],
    "regexp/no-contradiction-with-assertion": [
      2,
    ],
    "regexp/no-dupe-characters-character-class": [
      2,
    ],
    "regexp/no-dupe-disjunctions": [
      2,
    ],
    "regexp/no-empty-alternative": [
      1,
    ],
    "regexp/no-empty-capturing-group": [
      2,
    ],
    "regexp/no-empty-character-class": [
      2,
    ],
    "regexp/no-empty-group": [
      2,
    ],
    "regexp/no-empty-lookarounds-assertion": [
      2,
    ],
    "regexp/no-empty-string-literal": [
      2,
    ],
    "regexp/no-escape-backspace": [
      2,
    ],
    "regexp/no-extra-lookaround-assertions": [
      2,
    ],
    "regexp/no-invalid-regexp": [
      2,
    ],
    "regexp/no-invisible-character": [
      2,
    ],
    "regexp/no-lazy-ends": [
      1,
    ],
    "regexp/no-legacy-features": [
      2,
    ],
    "regexp/no-misleading-capturing-group": [
      2,
    ],
    "regexp/no-misleading-unicode-character": [
      2,
    ],
    "regexp/no-missing-g-flag": [
      2,
    ],
    "regexp/no-non-standard-flag": [
      2,
    ],
    "regexp/no-obscure-range": [
      2,
    ],
    "regexp/no-optional-assertion": [
      2,
    ],
    "regexp/no-potentially-useless-backreference": [
      1,
    ],
    "regexp/no-super-linear-backtracking": [
      2,
    ],
    "regexp/no-trivially-nested-assertion": [
      2,
    ],
    "regexp/no-trivially-nested-quantifier": [
      2,
    ],
    "regexp/no-unused-capturing-group": [
      2,
    ],
    "regexp/no-useless-assertions": [
      2,
    ],
    "regexp/no-useless-backreference": [
      2,
    ],
    "regexp/no-useless-character-class": [
      2,
    ],
    "regexp/no-useless-dollar-replacements": [
      2,
    ],
    "regexp/no-useless-escape": [
      2,
    ],
    "regexp/no-useless-flag": [
      1,
    ],
    "regexp/no-useless-lazy": [
      2,
    ],
    "regexp/no-useless-non-capturing-group": [
      2,
    ],
    "regexp/no-useless-quantifier": [
      2,
    ],
    "regexp/no-useless-range": [
      2,
    ],
    "regexp/no-useless-set-operand": [
      2,
    ],
    "regexp/no-useless-string-literal": [
      2,
    ],
    "regexp/no-useless-two-nums-quantifier": [
      2,
    ],
    "regexp/no-zero-quantifier": [
      2,
    ],
    "regexp/optimal-lookaround-quantifier": [
      1,
    ],
    "regexp/optimal-quantifier-concatenation": [
      2,
    ],
    "regexp/prefer-character-class": [
      2,
    ],
    "regexp/prefer-d": [
      2,
    ],
    "regexp/prefer-plus-quantifier": [
      2,
    ],
    "regexp/prefer-predefined-assertion": [
      2,
    ],
    "regexp/prefer-question-quantifier": [
      2,
    ],
    "regexp/prefer-range": [
      2,
    ],
    "regexp/prefer-set-operation": [
      2,
    ],
    "regexp/prefer-star-quantifier": [
      2,
    ],
    "regexp/prefer-unicode-codepoint-escapes": [
      2,
    ],
    "regexp/prefer-w": [
      2,
    ],
    "regexp/simplify-set-operations": [
      2,
    ],
    "regexp/sort-flags": [
      2,
    ],
    "regexp/strict": [
      2,
    ],
    "regexp/use-ignore-case": [
      2,
    ],
    "require-yield": [
      2,
    ],
    "simple-import-sort/exports": [
      1,
    ],
    "simple-import-sort/imports": [
      1,
    ],
    "unicorn/escape-case": [
      2,
    ],
    "unicorn/no-await-in-promise-methods": [
      2,
    ],
    "unicorn/no-hex-escape": [
      2,
    ],
    "unicorn/no-instanceof-array": [
      2,
    ],
    "unicorn/no-invalid-remove-event-listener": [
      2,
    ],
    "unicorn/no-new-buffer": [
      2,
    ],
    "unicorn/no-single-promise-in-promise-methods": [
      2,
    ],
    "unicorn/no-static-only-class": [
      2,
    ],
    "unicorn/no-typeof-undefined": [
      2,
    ],
    "unicorn/no-useless-spread": [
      2,
    ],
    "unicorn/number-literal-case": [
      2,
    ],
    "unicorn/numeric-separators-style": [
      2,
      {
        "onlyIfContainsSeparator": true,
      },
    ],
    "unicorn/prefer-array-find": [
      2,
    ],
    "unicorn/prefer-array-index-of": [
      2,
    ],
    "unicorn/prefer-array-some": [
      2,
    ],
    "unicorn/prefer-blob-reading-methods": [
      2,
    ],
    "unicorn/prefer-date-now": [
      2,
    ],
    "unicorn/prefer-default-parameters": [
      2,
    ],
    "unicorn/prefer-includes": [
      2,
    ],
    "unicorn/prefer-logical-operator-over-ternary": [
      2,
    ],
    "unicorn/prefer-native-coercion-functions": [
      2,
    ],
    "unicorn/prefer-node-protocol": [
      2,
    ],
    "unicorn/prefer-number-properties": [
      2,
    ],
    "unicorn/prefer-optional-catch-binding": [
      2,
    ],
    "unicorn/prefer-regexp-test": [
      2,
    ],
    "unicorn/prefer-string-starts-ends-with": [
      2,
    ],
    "unicorn/prefer-string-trim-start-end": [
      2,
    ],
    "unicorn/prefer-type-error": [
      2,
    ],
    "use-isnan": [
      2,
    ],
    "valid-typeof": [
      2,
    ],
  },
}
`;

exports[`ESLint calculated config Snapshot > .ts 1`] = `
{
  "languageOptions": {
    "ecmaVersion": "latest",
    "parser": "typescript-eslint/parser",
    "parserOptions": {
      "project": "./tsconfig.json",
    },
    "sourceType": "module",
  },
  "linterOptions": {
    "reportUnusedDisableDirectives": 1,
  },
  "plugins": [
    "@",
    "simple-import-sort:eslint-plugin-simple-import-sort",
    "redos",
    "unicorn:eslint-plugin-unicorn",
    "regexp:eslint-plugin-regexp",
    "jest:eslint-plugin-jest",
    "@typescript-eslint:@typescript-eslint/eslint-plugin",
  ],
  "rules": {
    "@typescript-eslint/adjacent-overload-signatures": [
      2,
    ],
    "@typescript-eslint/array-type": [
      2,
    ],
    "@typescript-eslint/await-thenable": [
      2,
    ],
    "@typescript-eslint/ban-ts-comment": [
      2,
      {
        "minimumDescriptionLength": 10,
      },
    ],
    "@typescript-eslint/ban-tslint-comment": [
      2,
    ],
    "@typescript-eslint/ban-types": [
      2,
    ],
    "@typescript-eslint/consistent-generic-constructors": [
      2,
    ],
    "@typescript-eslint/consistent-indexed-object-style": [
      2,
    ],
    "@typescript-eslint/consistent-type-assertions": [
      2,
    ],
    "@typescript-eslint/consistent-type-imports": [
      1,
    ],
    "@typescript-eslint/default-param-last": [
      2,
    ],
    "@typescript-eslint/dot-notation": [
      2,
    ],
    "@typescript-eslint/explicit-member-accessibility": [
      1,
    ],
    "@typescript-eslint/naming-convention": [
      2,
      {
        "format": [
          "camelCase",
          "PascalCase",
          "UPPER_CASE",
        ],
        "selector": "variable",
      },
      {
        "format": [
          "camelCase",
          "PascalCase",
        ],
        "selector": "function",
      },
      {
        "format": [
          "PascalCase",
        ],
        "selector": "typeLike",
      },
    ],
    "@typescript-eslint/no-array-constructor": [
      2,
    ],
    "@typescript-eslint/no-array-delete": [
      2,
    ],
    "@typescript-eslint/no-base-to-string": [
      2,
    ],
    "@typescript-eslint/no-confusing-non-null-assertion": [
      2,
    ],
    "@typescript-eslint/no-confusing-void-expression": [
      2,
    ],
    "@typescript-eslint/no-duplicate-enum-values": [
      2,
    ],
    "@typescript-eslint/no-duplicate-type-constituents": [
      2,
    ],
    "@typescript-eslint/no-dynamic-delete": [
      2,
    ],
    "@typescript-eslint/no-empty-interface": [
      2,
    ],
    "@typescript-eslint/no-explicit-any": [
      2,
    ],
    "@typescript-eslint/no-extra-non-null-assertion": [
      2,
    ],
    "@typescript-eslint/no-extraneous-class": [
      2,
    ],
    "@typescript-eslint/no-floating-promises": [
      2,
      {
        "ignoreIIFE": true,
      },
    ],
    "@typescript-eslint/no-for-in-array": [
      2,
    ],
    "@typescript-eslint/no-implied-eval": [
      2,
    ],
    "@typescript-eslint/no-inferrable-types": [
      2,
    ],
    "@typescript-eslint/no-invalid-void-type": [
      2,
    ],
    "@typescript-eslint/no-loop-func": [
      2,
    ],
    "@typescript-eslint/no-loss-of-precision": [
      2,
    ],
    "@typescript-eslint/no-meaningless-void-operator": [
      2,
    ],
    "@typescript-eslint/no-misused-new": [
      2,
    ],
    "@typescript-eslint/no-misused-promises": [
      2,
    ],
    "@typescript-eslint/no-mixed-enums": [
      2,
    ],
    "@typescript-eslint/no-namespace": [
      2,
    ],
    "@typescript-eslint/no-non-null-asserted-nullish-coalescing": [
      2,
    ],
    "@typescript-eslint/no-non-null-asserted-optional-chain": [
      2,
    ],
    "@typescript-eslint/no-non-null-assertion": [
      2,
    ],
    "@typescript-eslint/no-redundant-type-constituents": [
      1,
    ],
    "@typescript-eslint/no-this-alias": [
      2,
    ],
    "@typescript-eslint/no-unnecessary-boolean-literal-compare": [
      2,
    ],
    "@typescript-eslint/no-unnecessary-condition": [
      2,
    ],
    "@typescript-eslint/no-unnecessary-type-arguments": [
      2,
    ],
    "@typescript-eslint/no-unnecessary-type-assertion": [
      2,
    ],
    "@typescript-eslint/no-unnecessary-type-constraint": [
      2,
    ],
    "@typescript-eslint/no-unsafe-argument": [
      2,
    ],
    "@typescript-eslint/no-unsafe-assignment": [
      2,
    ],
    "@typescript-eslint/no-unsafe-call": [
      2,
    ],
    "@typescript-eslint/no-unsafe-declaration-merging": [
      2,
    ],
    "@typescript-eslint/no-unsafe-enum-comparison": [
      2,
    ],
    "@typescript-eslint/no-unsafe-member-access": [
      2,
    ],
    "@typescript-eslint/no-unsafe-return": [
      2,
    ],
    "@typescript-eslint/no-unused-expressions": [
      2,
    ],
    "@typescript-eslint/no-unused-vars": [
      2,
    ],
    "@typescript-eslint/no-useless-constructor": [
      2,
    ],
    "@typescript-eslint/no-useless-empty-export": [
      1,
    ],
    "@typescript-eslint/no-useless-template-literals": [
      2,
    ],
    "@typescript-eslint/no-var-requires": [
      2,
    ],
    "@typescript-eslint/non-nullable-type-assertion-style": [
      2,
    ],
    "@typescript-eslint/only-throw-error": [
      2,
    ],
    "@typescript-eslint/prefer-as-const": [
      2,
    ],
    "@typescript-eslint/prefer-for-of": [
      2,
    ],
    "@typescript-eslint/prefer-function-type": [
      2,
    ],
    "@typescript-eslint/prefer-includes": [
      2,
    ],
    "@typescript-eslint/prefer-literal-enum-member": [
      2,
    ],
    "@typescript-eslint/prefer-namespace-keyword": [
      2,
    ],
    "@typescript-eslint/prefer-nullish-coalescing": [
      2,
    ],
    "@typescript-eslint/prefer-promise-reject-errors": [
      2,
    ],
    "@typescript-eslint/prefer-readonly": [
      1,
    ],
    "@typescript-eslint/prefer-reduce-type-parameter": [
      2,
    ],
    "@typescript-eslint/prefer-return-this-type": [
      2,
    ],
    "@typescript-eslint/prefer-string-starts-ends-with": [
      2,
    ],
    "@typescript-eslint/prefer-ts-expect-error": [
      2,
    ],
    "@typescript-eslint/require-await": [
      2,
    ],
    "@typescript-eslint/restrict-plus-operands": [
      2,
      {
        "allowAny": false,
        "allowBoolean": false,
        "allowNullish": false,
        "allowNumberAndString": false,
        "allowRegExp": false,
      },
    ],
    "@typescript-eslint/return-await": [
      1,
      "always",
    ],
    "@typescript-eslint/strict-boolean-expressions": [
      2,
    ],
    "@typescript-eslint/triple-slash-reference": [
      2,
    ],
    "@typescript-eslint/unbound-method": [
      2,
    ],
    "@typescript-eslint/unified-signatures": [
      2,
    ],
    "@typescript-eslint/use-unknown-in-catch-callback-variable": [
      2,
    ],
    "default-case-last": [
      2,
    ],
    "eqeqeq": [
      2,
      "always",
      {
        "null": "ignore",
      },
    ],
    "for-direction": [
      2,
    ],
    "func-names": [
      1,
    ],
    "grouped-accessor-pairs": [
      2,
    ],
    "guard-for-in": [
      2,
    ],
    "jest/expect-expect": [
      1,
    ],
    "jest/no-alias-methods": [
      2,
    ],
    "jest/no-commented-out-tests": [
      1,
    ],
    "jest/no-conditional-expect": [
      2,
    ],
    "jest/no-disabled-tests": [
      1,
    ],
    "jest/no-done-callback": [
      2,
    ],
    "jest/no-export": [
      2,
    ],
    "jest/no-focused-tests": [
      2,
    ],
    "jest/no-identical-title": [
      2,
    ],
    "jest/no-interpolation-in-snapshots": [
      2,
    ],
    "jest/no-jasmine-globals": [
      2,
    ],
    "jest/no-mocks-import": [
      2,
    ],
    "jest/no-standalone-expect": [
      2,
    ],
    "jest/no-test-prefixes": [
      2,
    ],
    "jest/prefer-to-be": [
      2,
    ],
    "jest/prefer-to-contain": [
      2,
    ],
    "jest/prefer-to-have-length": [
      2,
    ],
    "jest/valid-describe-callback": [
      2,
    ],
    "jest/valid-expect": [
      2,
    ],
    "jest/valid-expect-in-promise": [
      2,
    ],
    "jest/valid-title": [
      2,
    ],
    "no-async-promise-executor": [
      2,
    ],
    "no-await-in-loop": [
      1,
    ],
    "no-buffer-constructor": [
      2,
    ],
    "no-caller": [
      2,
    ],
    "no-case-declarations": [
      2,
    ],
    "no-class-assign": [
      2,
    ],
    "no-compare-neg-zero": [
      2,
    ],
    "no-cond-assign": [
      2,
    ],
    "no-constant-binary-expression": [
      2,
    ],
    "no-constant-condition": [
      2,
    ],
    "no-control-regex": [
      2,
    ],
    "no-debugger": [
      2,
    ],
    "no-delete-var": [
      2,
    ],
    "no-dupe-else-if": [
      2,
    ],
    "no-duplicate-case": [
      2,
    ],
    "no-else-return": [
      2,
      {
        "allowElseIf": false,
      },
    ],
    "no-empty": [
      2,
      {
        "allowEmptyCatch": true,
      },
    ],
    "no-empty-pattern": [
      2,
    ],
    "no-empty-static-block": [
      1,
    ],
    "no-eval": [
      2,
    ],
    "no-ex-assign": [
      2,
    ],
    "no-extend-native": [
      2,
    ],
    "no-extra-bind": [
      2,
    ],
    "no-extra-boolean-cast": [
      2,
    ],
    "no-extra-label": [
      2,
    ],
    "no-fallthrough": [
      2,
    ],
    "no-global-assign": [
      2,
    ],
    "no-irregular-whitespace": [
      2,
    ],
    "no-iterator": [
      2,
    ],
    "no-label-var": [
      2,
    ],
    "no-lone-blocks": [
      2,
    ],
    "no-lonely-if": [
      2,
    ],
    "no-misleading-character-class": [
      2,
    ],
    "no-new": [
      2,
    ],
    "no-new-native-nonconstructor": [
      2,
    ],
    "no-new-object": [
      2,
    ],
    "no-new-require": [
      2,
    ],
    "no-new-wrappers": [
      2,
    ],
    "no-nonoctal-decimal-escape": [
      2,
    ],
    "no-octal": [
      2,
    ],
    "no-octal-escape": [
      2,
    ],
    "no-path-concat": [
      2,
    ],
    "no-promise-executor-return": [
      2,
    ],
    "no-proto": [
      2,
    ],
    "no-prototype-builtins": [
      2,
    ],
    "no-regex-spaces": [
      2,
    ],
    "no-restricted-properties": [
      2,
      {
        "message": "arguments.callee is deprecated",
        "object": "arguments",
        "property": "callee",
      },
      {
        "message": "Please use Number.isFinite instead",
        "object": "global",
        "property": "isFinite",
      },
      {
        "message": "Please use Number.isFinite instead",
        "object": "self",
        "property": "isFinite",
      },
      {
        "message": "Please use Number.isFinite instead",
        "object": "window",
        "property": "isFinite",
      },
      {
        "message": "Please use Number.isNaN instead",
        "object": "global",
        "property": "isNaN",
      },
      {
        "message": "Please use Number.isNaN instead",
        "object": "self",
        "property": "isNaN",
      },
      {
        "message": "Please use Number.isNaN instead",
        "object": "window",
        "property": "isNaN",
      },
      {
        "message": "Please use Object.defineProperty instead.",
        "property": "__defineGetter__",
      },
      {
        "message": "Please use Object.defineProperty instead.",
        "property": "__defineSetter__",
      },
      {
        "message": "Use the exponentiation operator (**) instead.",
        "object": "Math",
        "property": "pow",
      },
    ],
    "no-return-assign": [
      2,
    ],
    "no-script-url": [
      2,
    ],
    "no-self-assign": [
      2,
    ],
    "no-self-compare": [
      2,
    ],
    "no-sequences": [
      2,
    ],
    "no-shadow-restricted-names": [
      2,
    ],
    "no-sparse-arrays": [
      2,
    ],
    "no-template-curly-in-string": [
      2,
    ],
    "no-undef-init": [
      2,
    ],
    "no-unsafe-finally": [
      2,
    ],
    "no-unsafe-optional-chaining": [
      2,
    ],
    "no-unused-labels": [
      2,
    ],
    "no-unused-private-class-members": [
      2,
    ],
    "no-useless-catch": [
      2,
    ],
    "no-useless-escape": [
      2,
    ],
    "no-var": [
      2,
    ],
    "no-with": [
      2,
    ],
    "prefer-const": [
      1,
    ],
    "prefer-destructuring": [
      2,
      {
        "AssignmentExpression": {
          "array": false,
          "object": false,
        },
        "VariableDeclarator": {
          "array": false,
          "object": true,
        },
      },
      {
        "enforceForRenamedProperties": false,
      },
    ],
    "prefer-rest-params": [
      2,
    ],
    "prefer-spread": [
      2,
    ],
    "redos/no-vulnerable": [
      2,
    ],
    "regexp/confusing-quantifier": [
      1,
    ],
    "regexp/control-character-escape": [
      2,
    ],
    "regexp/match-any": [
      2,
    ],
    "regexp/negation": [
      2,
    ],
    "regexp/no-contradiction-with-assertion": [
      2,
    ],
    "regexp/no-dupe-characters-character-class": [
      2,
    ],
    "regexp/no-dupe-disjunctions": [
      2,
    ],
    "regexp/no-empty-alternative": [
      1,
    ],
    "regexp/no-empty-capturing-group": [
      2,
    ],
    "regexp/no-empty-character-class": [
      2,
    ],
    "regexp/no-empty-group": [
      2,
    ],
    "regexp/no-empty-lookarounds-assertion": [
      2,
    ],
    "regexp/no-empty-string-literal": [
      2,
    ],
    "regexp/no-escape-backspace": [
      2,
    ],
    "regexp/no-extra-lookaround-assertions": [
      2,
    ],
    "regexp/no-invalid-regexp": [
      2,
    ],
    "regexp/no-invisible-character": [
      2,
    ],
    "regexp/no-lazy-ends": [
      1,
    ],
    "regexp/no-legacy-features": [
      2,
    ],
    "regexp/no-misleading-capturing-group": [
      2,
    ],
    "regexp/no-misleading-unicode-character": [
      2,
    ],
    "regexp/no-missing-g-flag": [
      2,
    ],
    "regexp/no-non-standard-flag": [
      2,
    ],
    "regexp/no-obscure-range": [
      2,
    ],
    "regexp/no-optional-assertion": [
      2,
    ],
    "regexp/no-potentially-useless-backreference": [
      1,
    ],
    "regexp/no-super-linear-backtracking": [
      2,
    ],
    "regexp/no-trivially-nested-assertion": [
      2,
    ],
    "regexp/no-trivially-nested-quantifier": [
      2,
    ],
    "regexp/no-unused-capturing-group": [
      2,
    ],
    "regexp/no-useless-assertions": [
      2,
    ],
    "regexp/no-useless-backreference": [
      2,
    ],
    "regexp/no-useless-character-class": [
      2,
    ],
    "regexp/no-useless-dollar-replacements": [
      2,
    ],
    "regexp/no-useless-escape": [
      2,
    ],
    "regexp/no-useless-flag": [
      1,
    ],
    "regexp/no-useless-lazy": [
      2,
    ],
    "regexp/no-useless-non-capturing-group": [
      2,
    ],
    "regexp/no-useless-quantifier": [
      2,
    ],
    "regexp/no-useless-range": [
      2,
    ],
    "regexp/no-useless-set-operand": [
      2,
    ],
    "regexp/no-useless-string-literal": [
      2,
    ],
    "regexp/no-useless-two-nums-quantifier": [
      2,
    ],
    "regexp/no-zero-quantifier": [
      2,
    ],
    "regexp/optimal-lookaround-quantifier": [
      1,
    ],
    "regexp/optimal-quantifier-concatenation": [
      2,
    ],
    "regexp/prefer-character-class": [
      2,
    ],
    "regexp/prefer-d": [
      2,
    ],
    "regexp/prefer-plus-quantifier": [
      2,
    ],
    "regexp/prefer-predefined-assertion": [
      2,
    ],
    "regexp/prefer-question-quantifier": [
      2,
    ],
    "regexp/prefer-range": [
      2,
    ],
    "regexp/prefer-set-operation": [
      2,
    ],
    "regexp/prefer-star-quantifier": [
      2,
    ],
    "regexp/prefer-unicode-codepoint-escapes": [
      2,
    ],
    "regexp/prefer-w": [
      2,
    ],
    "regexp/simplify-set-operations": [
      2,
    ],
    "regexp/sort-flags": [
      2,
    ],
    "regexp/strict": [
      2,
    ],
    "regexp/use-ignore-case": [
      2,
    ],
    "require-yield": [
      2,
    ],
    "simple-import-sort/exports": [
      1,
    ],
    "simple-import-sort/imports": [
      1,
    ],
    "unicorn/escape-case": [
      2,
    ],
    "unicorn/no-await-in-promise-methods": [
      2,
    ],
    "unicorn/no-hex-escape": [
      2,
    ],
    "unicorn/no-instanceof-array": [
      2,
    ],
    "unicorn/no-invalid-remove-event-listener": [
      2,
    ],
    "unicorn/no-new-buffer": [
      2,
    ],
    "unicorn/no-single-promise-in-promise-methods": [
      2,
    ],
    "unicorn/no-static-only-class": [
      2,
    ],
    "unicorn/no-typeof-undefined": [
      2,
    ],
    "unicorn/no-useless-spread": [
      2,
    ],
    "unicorn/numeric-separators-style": [
      2,
      {
        "onlyIfContainsSeparator": true,
      },
    ],
    "unicorn/prefer-array-find": [
      2,
    ],
    "unicorn/prefer-array-index-of": [
      2,
    ],
    "unicorn/prefer-array-some": [
      2,
    ],
    "unicorn/prefer-blob-reading-methods": [
      2,
    ],
    "unicorn/prefer-date-now": [
      2,
    ],
    "unicorn/prefer-default-parameters": [
      2,
    ],
    "unicorn/prefer-includes": [
      2,
    ],
    "unicorn/prefer-logical-operator-over-ternary": [
      2,
    ],
    "unicorn/prefer-native-coercion-functions": [
      2,
    ],
    "unicorn/prefer-node-protocol": [
      2,
    ],
    "unicorn/prefer-number-properties": [
      2,
    ],
    "unicorn/prefer-optional-catch-binding": [
      2,
    ],
    "unicorn/prefer-regexp-test": [
      2,
    ],
    "unicorn/prefer-string-starts-ends-with": [
      2,
    ],
    "unicorn/prefer-string-trim-start-end": [
      2,
    ],
    "unicorn/prefer-type-error": [
      2,
    ],
    "use-isnan": [
      2,
    ],
  },
}
`;
